cmake_minimum_required(VERSION 3.12)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(semantic_feature_detect VERSION 1.0)
find_package( OpenCV REQUIRED )
add_subdirectory(thirdparty/DBoW2/)
add_subdirectory(thirdparty/jsoncpp/)
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(thirdparty/DBoW2/include)
include_directories(thirdparty/jsoncpp/)
add_executable(feature_detection feature_detection.cpp)
target_link_libraries(feature_detection "${OpenCV_LIBS}")
target_link_libraries(feature_detection DBoW2)
target_link_libraries(feature_detection jsoncpp)
